# thoughtfulai-test

./: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
rag/: agent.py  embedding.py
