[tool.poetry]
name = "thoughtfulai-test"
version = "0.0.1"
description = "ThoughtfulAI Test"
authors = ["RockyNiu <lei.niu.ny@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.12, <4.0"
chromadb = "^0.5.7"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
langchainhub = "^0.1.21"
python-dotenv = "^1.0.1"
langchain-ollama = "^0.2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.7"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 
